# autonomous-systems

./: .clang-format  .clocignore  .gitattributes  .gitignore  .gitmodules  .mailmap  CONTRIBUTING.md  CPPLINT.cfg  Dockerfile  Doxyfile  README.md  README_8md.html  ReportAndre.md  acceleration__mapper_8py.html  annotated.html  annotated_dup.js  can_8c.html  can_8c__incl.map  can_8c__incl.md5  can_8c_aac1918f7b4492f0b299f27dd576d6d78_icgraph.map  can_8h.html  can_8h__dep__incl.map  can_8h__dep__incl.md5  can_8h__incl.map  can_8h__incl.md5  can_8h_a9115860092012f045bcac21f58ad8d7a_icgraph.map  can_8h_a9115860092012f045bcac21f58ad8d7a_icgraph.md5  can_8h_aac1918f7b4492f0b299f27dd576d6d78_icgraph.md5  can_8h_source.html  car_8hpp.html  car_8hpp__dep__incl.map  car_8hpp_source.html  classAdapter-members.html  classAdapter.html  classAdapter__coll__graph.map  classAdapter__coll__graph.md5  classCanInterface-members.html  classCanInterface.html  classCanInterface__coll__graph.md5  classCanInterface_a30b4be0d42ccab7b5a4b321f1dff2353_cgraph.map  (+3271 more)
src/can/: CMakeLists.txt  package.xml
src/can/src/: can.cpp  main.cpp  test_node.cpp
src/common_lib/: CMakeLists.txt  README.md  package.xml
src/common_lib/test/: main.cpp  vehicle_dynamics_test.cpp
src/control/: .gitignore  CMakeLists.txt  Doxyfile  README.md  dependencies_install.sh  package.xml  setup.py
src/control/config_files/: eufs.yaml  pacsim.yaml  vehicle.yaml
src/control/control/: abstraction_layer.py  adapter.py  config.py  control_node.py  helpers.py  inspection.py  main.py  mpc.py  mpc_utils.py  optimizer.py  package.xml  pid_utils.py  utils.py
src/control/control_mpc/: Doxyfile
src/control/launch/: control.launch.py  eufs.launch.py  pacsim.launch.py  vehicle.launch.py
src/control/src/: main.cpp
src/control/test/: control_measures.csv  integration_test.py  lpf_test.cpp  main.cpp  node_control_test.cpp  pid_test.cpp  pp_test.cpp  psolver_test.cpp  stanley_test.cpp  test_utils.py  utils.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: AeroForces.msg  Ai2Vcu.msg  BamocarErrors.msg  BmsErrors.msg  BoundingBox.msg  BoundingBoxes.msg  CanStatistics.msg  CellsTemps.msg  Cone.msg  ConeArray.msg  ControlCommand.msg  ControlParameters.msg  DataLogInfo1.msg  DataLogInfo2.msg  EvaluatorControlData.msg  Gps.msg  HydraulicLinePressure.msg  Imu.msg  ImuAcceleration.msg  ImuData.msg  Landmark.msg  LocalMap.msg  MasterLog.msg  MasterLog2.msg  Odom.msg  OperationalStatus.msg  Path.msg  PathPoint.msg  PathPointArray.msg  PerceivedObject.msg  PerceptionData.msg  PerceptionOutput.msg  PerceptionParameters.msg  PlanningParameters.msg  Point2d.msg  PointArray.msg  Pose.msg  PowertrainState.msg  ProcessUsage.msg  ProcessUsageArray.msg  (+20 more)
src/data_infrastructure/: package.xml  setup.cfg  setup.py
src/data_infrastructure/data_infrastructure/: data_infrastructure_node.py
src/data_infrastructure/launch/: data_infrastructure.launch.py
src/davide_node/: CMakeLists.txt  package.xml
src/davide_node/src/: publisher_davide_node.cpp  subscriber_davide_node.cpp
src/ekf_state_est/: CMakeLists.txt  README.md  package.xml
src/ekf_state_est/config_files/: eufs.yaml  pacsim.yaml  vehicle.yaml
src/ekf_state_est/launch/: ekf_state_est.launch.py  eufs.launch.py  eufssim-slam.launch.py  normal-slam.launch.py  pacsim-slam.launch.py  pacsim.launch.py  vehicle.launch.py
src/ekf_state_est/src/: main.cpp
src/ekf_state_est/test/: data_association_test.cpp  ekf_state_est_performance_test.cpp  integration_test.cpp  main.cpp  motion_model_test.cpp  observation_model_test.cpp  slam_test.cpp  utils_test.cpp
src/eufs_msgs/: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml
src/eufs_msgs-master/: CMakeLists.txt  package.xml
src/eufs_msgs-master/msg/: EKFState.msg  IntegrationErr.msg  PathIntegralTiming.msg  SystemStatus.msg
src/eufs_msgs/action/: CheckForObjects.action
src/eufs_msgs/msg/: BoundingBox.msg  CanState.msg  CarState.msg  ChassisCommand.msg  ChassisState.msg  ConeArray.msg  ConeArrayWithCovariance.msg  ConeArrayWithCovariancePlus.msg  ConeAssociation.msg  ConeAssociationArray.msg  ConeAssociationArrayArrayStamped.msg  ConeWithCovariance.msg  ConeWithCovariancePlus.msg  Costmap.msg  EKFErr.msg  FullState.msg  Heartbeat.msg  LapStats.msg  NodeState.msg  NodeStateArray.msg  OSS.msg  Particle.msg  ParticleSLAM.msg  ParticleSLAMStamped.msg  ParticleStamped.msg  PathIntegralStats.msg  PathIntegralStatus.msg  PlanningMode.msg  PointArray.msg  PointArrayStamped.msg  PurePursuitCheckpoint.msg  PurePursuitCheckpointArrayStamped.msg  Runstop.msg  SLAMErr.msg  SLAMState.msg  StateMachineState.msg  StereoImage.msg  TopicStatus.msg  VehicleCommands.msg  VehicleCommandsStamped.msg  (+5 more)
src/eufs_msgs/srv/: GetMap.srv  RecordStart.srv  RecordStop.srv  Register.srv  SetCanState.srv  SetMission.srv
src/foxglove_websocket/: CMakeLists.txt  README.md  node.json  package.xml
src/foxglove_websocket/scripts/: lightweight_client.py
src/foxglove_websocket/src/: simple_websocket_server.cpp  (+1 more)
src/fs_mpc_controller/: package.xml  setup.cfg  setup.py
src/fsfsim/: CMakeLists.txt  README.md  package.xml
src/helper_pkg/: CMakeLists.txt  package.xml
src/inspection/: CMakeLists.txt  README.md  package.xml
src/invictasim/: CMakeLists.txt  README.md  manual_to_as.py  package.xml
src/invictasim_keys/: README.md  package.xml  setup.cfg  setup.py
src/loc_map/: CMakeLists.txt  Doxyfile  README.md  package.xml  run.sh  run_debug.sh
src/long_control/: CMakeLists.txt  README.md  package.xml
src/mocker_node/: CMakeLists.txt  README.md  package.xml
src/motion_lib/: CMakeLists.txt  package.xml
src/mpc_controller/: README.md  package.xml  setup.cfg  setup.py
src/observation_lib/: CMakeLists.txt  package.xml
src/path_planning_mock/: package.xml  setup.cfg
src/perception/: CMakeLists.txt  Doxyfile  README.md  erase_integration_test_results  package.xml  point_debug_frame_0.csv  point_debug_frame_1.csv  setup.py
src/perception_sensor_lib/: CMakeLists.txt  README.md  package.xml
(+14115 files in other folders)
