<?xml version="1.0"?>
<package format="3">
  <name>data_infrastructure</name>
  <version>0.0.1</version>
  <description>Minimal functional Python ROS 2 node</description>
  <maintainer email="joana.az.louro@gmail.com">Joana Louro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
