<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ekf_state_est</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marhcouto@todo.todo">marhcouto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>custom_interfaces</exec_depend>
  <exec_depend>eufs_msgs</exec_depend>
  <exec_depend>fs_msgs</exec_depend>
  <exec_depend>common_lib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
